# rssync

./: .gitignore  README.md  pyproject.toml  rss.py  rssync-config.example.json
rssync/: main.py
